--- a/charts/registry-scanner/templates/secret.yaml
+++ b/charts/registry-scanner/templates/secret.yaml
@@ -14,10 +14,10 @@ data:
   aws_region: {{ required "A valid .Values.config.aws.region is required" .Values.config.aws.region | b64enc | quote }}
   {{- else if eq .Values.config.registryType "gcr" }}
   registryUser: {{ "_json_key" | b64enc | quote }}
-  registryPassword: {{ required "A valid .Values.config.registryPassword is required" (printf "%s" (include "registry-scanner.sanitizeJSON" (printf "%s" .Values.config.registryPassword)) | b64enc | quote) }}
+  registryPassword: {{ required "A valid .Values.config.registryPassword is required" (include "registry-scanner.sanitizeJSON" (.Values.config.registryPassword | toJson)) | b64enc |quote }}
   {{- else if eq .Values.config.registryType "gar" }}
   registryUser: {{ "_json_key_base64" | b64enc | quote }}
-  registryPassword: {{ required "A valid .Values.config.registryPassword is required" (printf "%s" (include "registry-scanner.sanitizeJSON" (printf "%s" .Values.config.registryPassword)) | b64enc | b64enc |quote) }}
+  registryPassword: {{ required "A valid .Values.config.registryPassword is required" ((include "registry-scanner.sanitizeJSON" (.Values.config.registryPassword | toJson)) | b64enc | b64enc |quote) }}
   {{- else }}
   registryUser: {{ required "A valid .Values.config.registryUser is required" .Values.config.registryUser | b64enc | quote }}
   registryPassword: {{ required "A valid .Values.config.registryPassword is required" .Values.config.registryPassword | b64enc | quote }}
