fix: minor change

--- a/charts/registry-scanner/templates/secret.yaml
+++ b/charts/registry-scanner/templates/secret.yaml
@@ -14,7 +14,7 @@ data:
   aws_region: {{ required "A valid .Values.config.aws.region is required" .Values.config.aws.region | b64enc | quote }}
   {{- else if eq .Values.config.registryType "gar" }}
   registryUser: {{ "_json_key_base64" | b64enc | quote }}
-  registryPassword: {{ required "A valid .Values.config.registryPassword is required" .Values.config.registryUser | b64enc | quote }}
+  registryPassword: {{ required "A valid .Values.config.registryPassword is required" .Values.config.registryPassword | b64enc | quote }}
   {{- else }}
   registryUser: {{ required "A valid .Values.config.registryUser is required" .Values.config.registryUser | b64enc | quote }}
   registryPassword: {{ required "A valid .Values.config.registryPassword is required" .Values.config.registryPassword | b64enc | quote }}
