--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -348,15 +348,16 @@ tests:
     asserts:
       - equal:
           path: data.enable_platform_services
-          value: "true"
+          value: "false"
 
   - it: "has correct platform services value when onPremCompatibilityVersion is < 6.6"
     set:
       global.sysdig.apiHost: "http://test.com"
       onPremCompatibilityVersion: "6.5.99"
     asserts:
-      - isNull:
+      - equal:
           path: data.enable_platform_services
+          value: "false"
 
   - it: "has correct platform services value when onPremCompatibilityVersion is = 6.6.0"
     set:
@@ -365,7 +366,7 @@ tests:
     asserts:
       - equal:
           path: data.enable_platform_services
-          value: "true"
+          value: "false"
 
   - it: "has correct platform services value when onPremCompatibilityVersion is > 6.6.0"
     set:
@@ -374,4 +375,4 @@ tests:
     asserts:
       - equal:
           path: data.enable_platform_services
-          value: "true"
+          value: "false"
