--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -98,7 +98,7 @@ spec:
           {{- end }}
           {{- if (include "agent.legacyEbpfEnforced" .) }}
             - name: SYSDIG_AGENT_DRIVER
-              value: legacy_bpf
+              value: legacy_ebpf
           {{- end }}
           {{- range $key, $value := .Values.daemonset.kmodule.env }}
             - name: {{ $key | quote }}
@@ -189,10 +189,10 @@ spec:
             {{- end }}
             {{- if (include "agent.universalEbpfEnforced" .) }}
             - name: SYSDIG_AGENT_DRIVER
-              value: universal_bpf
+              value: universal_ebpf
             {{- else if (and (include "agent.ebpfEnabled" .) (eq "legacy" .Values.ebpf.kind )) }}
             - name: SYSDIG_AGENT_DRIVER
-              value: legacy_bpf
+              value: legacy_ebpf
             {{- end }}
             {{- if (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) }}
             - name: http_proxy
