--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -218,26 +218,24 @@ imageSbomExtractor:
     #   sentinelAddress: ""
     #   ttl: "168h" # Default ttl is 7 days
 
-  # Provide optional mirrors configuration to be used by Image SBOM Extractor to pull images.
+  # Provide optional registry mirrors configuration to be used by Image SBOM Extractor to pull images.
   # [Only Docker HUB images](https://docs.docker.com/registry/recipes/mirror/#gotcha) are going to be pulled from
   # the provided mirrors.
   #
-  # When provided, the parameter must be a string in docker-daemon configuration file format
-  # (see: https://docs.docker.com/registry/recipes/mirror/#configure-the-docker-daemon).
+  # The configuration is similar to the one currently supported by the docker-daemon where multiple mirrors
+  # (potentially insecure), can be specified.
+  #
+  # See https://docs.docker.com/registry/recipes/mirror/#configure-the-docker-daemon and https://docs.docker.com/registry/insecure/ .
   #
   # Example:
   #
-  # registryMirrorsConfig: \|-
-  #   {
-  #     "registry-mirrors": [
-  #       "insecure.mirror.acme.com",
-  #       "secure.mirror.acme.com"
-  #     ],
-  #     "insecure-registries": [
-  #       "insecure.mirror.acme.com"
-  #     ]
-  #   }
-  registryMirrorsConfig:
+  # mirrors:
+  #   registryMirrors:
+  #     - insecure.mirror.acme.com
+  #     - secure.mirror.acme.com
+  #   insecureRegistries:
+  #     - insecure.mirror.acme.com
+  mirrors:
 
 # Chart name override
 nameOverride: ""
