--- a/charts/node-analyzer/templates/secrets.yaml
+++ b/charts/node-analyzer/templates/secrets.yaml
@@ -1,4 +1,4 @@
-{{- if not (include "nodeAnalyzer.gke.autopilot" .) }}
+{{- if (include "deploy-na" .) }}
 {{- if not ( include "nodeAnalyzer.accessKeySecret" . ) }}
 apiVersion: v1
 kind: Secret
@@ -12,7 +12,6 @@ data:
  access-key : {{ include "nodeAnalyzer.accessKey" . | b64enc | quote }}
 {{- end }}
 ---
-{{- end }}
 {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
 apiVersion: v1
 kind: Secret
@@ -24,4 +23,5 @@ metadata:
 data:
   {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
 ---
+{{- end }}
 {{- end }}
