--- a/charts/node-analyzer/templates/securitycontextconstraint.yaml
+++ b/charts/node-analyzer/templates/securitycontextconstraint.yaml
@@ -1,3 +1,4 @@
+{{- if (include "deploy-na" .) }}
 {{- if and .Values.scc.create (.Capabilities.APIVersions.Has "security.openshift.io/v1") }}
 apiVersion: security.openshift.io/v1
 kind: SecurityContextConstraints
@@ -40,4 +41,5 @@ volumes:
 - secret
 - configMap
 - downwardAPI
+{{- end }}
 {{- end }}
