try to fix failed installation tests of kspm-collector & node analyzer

--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -5,7 +5,7 @@ httpProxy:
 httpsProxy:
 noProxy:
 sslVerifyCertificate:
-natsMaxReconnect: "0"
+natsMaxReconnect: 0
 # Namespace to deploy to (Optional: Will default to release namespace)
 namespace:
 
