--- a/charts/registry-scanner/values.yaml
+++ b/charts/registry-scanner/values.yaml
@@ -103,8 +103,8 @@ config:
       # The size limit for the emptyDir volume used by the scanner job.<br/>
       # This volume is used to store both the vulnerability database and the image to scan.
       temporaryVolumeSizeLimit: 2Gi
-  # Enable vulnerability MainDB V2
-  useMainDbV2: false
+  # The vulnerability database version to use. Supported versions: v1, v2. Default is v2.
+  # vulnerabilityDBVersion: "v1"
 ssl:
   ca:
     # For outbound connections.
