--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -170,7 +170,7 @@ ebpf:
   # Enable eBPF support for Sysdig Agent
   enabled: false
 
-  # Define the kind of eBPF driver that can be used in the agent. Can be `auto`, `legacy` or `universal`
+  # Define the kind of eBPF driver that can be used in the agent. Can be `auto`, `legacy_ebpf` or `universal_ebpf`
   kind: auto
 
 slim:
