--- a/charts/agent/tests/universal_ebpf_test.yaml
+++ b/charts/agent/tests/universal_ebpf_test.yaml
@@ -16,19 +16,38 @@ tests:
       - isNull:
           path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")]
 
-  - it: Ensure that when the eBPF is enabled with the default driver we create the sysdig container with the SYSDIG_BPF_PROBE and without SYSDIG_AGENT_DRIVER environment variables
+  - it: Ensure that when the eBPF is enabled the default driver is "legacy_ebpf" we create the sysdig container with the SYSDIG_BPF_PROBE and SYSDIG_AGENT_DRIVER=legacy_ebpf environment variables
     set:
       ebpf:
         enabled: true
     asserts:
       - isEmpty:
           path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_BPF_PROBE")].value
-      - isNull:
-          path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")]
+      - equal:
+          path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
+          value: legacy_ebpf
       - isEmpty:
           path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_BPF_PROBE")].value
-      - isNull:
-          path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")]
+      - equal:
+          path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
+          value: legacy_ebpf
+
+  - it: Ensure that when the eBPF is enabled and we specify to use the "legacy_ebpf" driver we create the sysdig container with the SYSDIG_BPF_PROBE and with SYSDIG_AGENT_DRIVER environment variables
+    set:
+      ebpf:
+        enabled: true
+        kind: legacy_ebpf
+    asserts:
+      - isEmpty:
+          path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_BPF_PROBE")].value
+      - equal:
+          path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
+          value: legacy_ebpf
+      - isEmpty:
+          path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_BPF_PROBE")].value
+      - equal:
+          path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
+          value: legacy_ebpf
 
   # TODO: remove before merge
   - it: Ensure that when the eBPF is enabled and we specify to use the "legacy" driver we create the sysdig container with the SYSDIG_BPF_PROBE and with SYSDIG_AGENT_DRIVER environment variables
@@ -48,29 +67,11 @@ tests:
           path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
           value: legacy_ebpf
 
-  - it: Ensure that when the eBPF is enabled and we specify to use the "legacy_ebpf" driver we create the sysdig container with the SYSDIG_BPF_PROBE and with SYSDIG_AGENT_DRIVER environment variables
+  - it: Ensure that when the eBPF is enabled and we specify to use the "universal_ebpf" driver we create the sysdig container without the SYSDIG_BPF_PROBE and with the SYSDIG_AGENT_DRIVER environment variables
     set:
       ebpf:
         enabled: true
-        kind: legacy
-    asserts:
-      - isEmpty:
-          path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_BPF_PROBE")].value
-      - equal:
-          path: spec.template.spec.initContainers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
-          value: legacy_ebpf
-      - isEmpty:
-          path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_BPF_PROBE")].value
-      - equal:
-          path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
-          value: legacy_ebpf
-
-  # TODO: remove before merge
-  - it: Ensure that when the eBPF is enabled and we specify to use the "universal" driver we create the sysdig container without the SYSDIG_BPF_PROBE and with the SYSDIG_AGENT_DRIVER environment variables
-    set:
-      ebpf:
-        enabled: true
-        kind: universal
+        kind: universal_ebpf
     asserts:
       - isNull:
           path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_BPF_PROBE")]
@@ -78,11 +79,12 @@ tests:
           path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_AGENT_DRIVER")].value
           value: universal_ebpf
 
-  - it: Ensure that when the eBPF is enabled and we specify to use the "universal_ebpf" driver we create the sysdig container without the SYSDIG_BPF_PROBE and with the SYSDIG_AGENT_DRIVER environment variables
+  # TODO: remove before merge
+  - it: Ensure that when the eBPF is enabled and we specify to use the "universal" driver we create the sysdig container without the SYSDIG_BPF_PROBE and with the SYSDIG_AGENT_DRIVER environment variables
     set:
       ebpf:
         enabled: true
-        kind: universal_ebpf
+        kind: universal
     asserts:
       - isNull:
           path: spec.template.spec.containers[*].env[?(@.name == "SYSDIG_BPF_PROBE")]
