feature(agent): add support for Universal eBPF - CA (#1270)
Co-authored-by: Adam Roberts <adam.roberts@sysdig.com>

--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -169,6 +169,10 @@ priorityClassValue: 10
 ebpf:
   # Enable eBPF support for Sysdig Agent
   enabled: false
+
+  # Define the kind of eBPF driver that will be used by the agent. Can be `legacy_ebpf` or `universal_ebpf`
+  kind: legacy_ebpf
+
 slim:
   # Uses a slim version of the Sysdig Agent
   enabled: true
