check only when onPremCompatibilityVersion is not provided

--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -401,8 +401,9 @@ tests:
       onPremCompatibilityVersion: "6.6.0"
       global.sysdig.region: ""
     asserts:
-      - isNull:
+      - equal:
           path: data.enable_platform_services
+          value: "true"
 
   - it: "has correct platform services value when onPremCompatibilityVersion is = 6.6.0 and region supports platform services"
     set:
